[package]
name = "incremental_merkle"
version = "0.1.0"
edition = "2021"


[dependencies]
halo2 = { git = "https://github.com/zcash/halo2", rev = "18e13b1d093113c93387d38e188d7dc85c64e1ec" }
pasta_curves = "0.2.1"
bitvec = "0.22"
ff = "0.11.0"
rand = "0.8.4"


wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]



[lib]
crate-type = ["cdylib"]
name = "incremental_merkle"
path = "src/lib.rs"